--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.554.0",
+    "mermaid": "^11.12.1",
     "next": "16.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "19.2.0",
